Updated font sizes for event grid and venue detail contents

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -53,6 +53,9 @@
                         <li><strong>XLR cables:</strong> x16</li>
                         <li><strong>58 type mics:</strong> x2</li>
                         <li><strong>Stage snake:</strong> 16x4</li>
+                        <li><strong>DI boxes:</strong> x3</li>
+                        <li><strong>Full drum backline:</strong> with 1 up, 1 down shells</li>
+                        <li><strong>Bass cab and head:</strong> x1</li>
                     </ul>
                 </div>
             </div>
