--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -374,6 +374,10 @@
     .events-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .admin-header h2 {
+        font-size: 1.5rem;
+    }
 }
 
 @media (max-width: 900px) {
