Fixed typo in home page venue description

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 
 <section class="venue-description">
     <h2>Welcome to BuNker11</h2>
-    <p>BuNker11 (BN11) is a the home of grass roots live and original music in the West End of Worthing. The venue currently hosts regular monthly gigs by TOT Presents and Hammerdown music promoters as well as some gigs by Paralytic Promotions. </p>
+    <p>BuNker11 (BN11) is the home of grass roots live and original music in the West End of Worthing. The venue currently hosts regular monthly gigs by TOT Presents and Hammerdown music promoters as well as some gigs by Paralytic Promotions. </p>
 </section>
 
 <div class="divider barbed-wire">
