--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="BuNker11 - Live Music and Events">
     <meta property="og:description" content="Discover upcoming gigs and explore past events at BuNker11.">
-    <meta property="og:image" content="{{ url_for('static', filename='images/slideshow/jpg/slideshow1.jpg') }}">
+    <meta property="og:image" content="{{ url_for('static', filename='images/og-image.jpg') }}">
     <meta property="og:url" content="{{ request.url }}">
     <meta property="og:type" content="website">
 
